syntax = "proto3";

option go_package ="./pb";

package pb;

// ------------------------------------ 
// Messages
// ------------------------------------ 

//--------------------------------repo--------------------------------
message Repo {
  uint64 dataId = 1; //dataId
  int64 dataCreateAt = 2; //dataCreateAt
  int64 dataUpdateAt = 3; //dataUpdateAt
  uint64 id = 4; //id
  string name = 5; //name
  bool gist = 6; //gist
  int64 starCount = 7; //starCount
  int64 forkCount = 8; //forkCount
  int64 issueCount = 9; //issueCount
  int64 commitCount = 10; //commitCount
  int64 prCount = 11; //prCount
  string language = 12; //language
  string description = 13; //description
  string readme = 14; //readme
}

message AddRepoReq {
  uint64 id = 1; //id
  string name = 2; //name
  bool gist = 3; //gist
  int64 starCount = 4; //starCount
  int64 forkCount = 5; //forkCount
  int64 issueCount = 6; //issueCount
  int64 commitCount = 7; //commitCount
  int64 prCount = 8; //prCount
  string language = 9; //language
  string description = 10; //description
  string readme = 11; //readme
}

message AddRepoResp {
}

message UpdateRepoReq {
  uint64 id = 1; //id
  string name = 2; //name
  bool gist = 3; //gist
  int64 starCount = 4; //starCount
  int64 forkCount = 5; //forkCount
  int64 issueCount = 6; //issueCount
  int64 commitCount = 7; //commitCount
  int64 prCount = 8; //prCount
  string language = 9; //language
  string description = 10; //description
  string readme = 11; //readme
}

message UpdateRepoResp {
}

message DelRepoByIdReq {
  uint64 id = 1; //id
}

message DelRepoByIdResp {
}

message GetRepoByIdReq {
  uint64 id = 1; //id
}

message GetRepoByIdResp {
  Repo repo = 1; //repo
}

message SearchRepoReq {
  int64 page = 1; //page
  int64 limit = 2; //limit
  uint64 id = 3; //id
  string name = 4; //name
  bool gist = 5; //gist
  int64 starCount = 6; //starCount
  int64 forkCount = 7; //forkCount
  int64 issueCount = 8; //issueCount
  int64 commitCount = 9; //commitCount
  int64 prCount = 10; //prCount
  string language = 11; //language
  string description = 12; //description
  string readme = 13; //readme
}

message SearchRepoResp {
  repeated Repo repo = 1; //repo
}



// ------------------------------------ 
// Rpc Func
// ------------------------------------ 

service repo{ 

	 //-----------------------repo----------------------- 
	 rpc AddRepo(AddRepoReq) returns (AddRepoResp); 
	 rpc UpdateRepo(UpdateRepoReq) returns (UpdateRepoResp); 
	 rpc DelRepoById(DelRepoByIdReq) returns (DelRepoByIdResp);
	 rpc GetRepoById(GetRepoByIdReq) returns (GetRepoByIdResp); 
	 rpc SearchRepo(SearchRepoReq) returns (SearchRepoResp); 

}
